<resources>
    <string name="app_name">Wi-Fi Pentester</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->

    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="settings_header">Settings</string>

    <string name="scan_title">Auto scan</string>
    <string name="filter_by_frequency_title">Show Wifi with frequency:</string>
    <string name="filter_by_wps_title">Show Wifi with Wps</string>
    <string name="sorting_network_title">Sorting network based on:</string>
    <string name="wifi_title">Wifi</string>
    <string name="menu_title">Menu</string>
    <string name="channels_title">Channels</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="wps">WPS</string>
    <string name="connected">Connected</string>
    <string name="tools">Tools</string>
    <string name="speed_test">Speed Test</string>
    <string name="password_recovery">Password Recovery</string>
    <string name="scan_local_network">Scan Local Network</string>
    <string name="free_wifi_map">Free Wifi Map</string>
    <string name="subnet_calculator">Subnet Calculator</string>
    <string name="mac_generator">Mac Generator</string>
    <string name="password_generator">Passwords Generator</string>
    <string name="other">Other</string>
    <string name="about">About</string>
    <string name="ok">OK</string>
    <string name="settings">Settings</string>
    <string name="sort_by">Sort by</string>
    <string name="filter_by">Filter by</string>
    <string name="filter_by_frequency">Filter by frequency</string>
    <string name="signal">Signal</string>
    <string name="name">Name</string>
    <string name="channel">Channel</string>
    <string name="vendor">Vendor</string>
    <string name="wep">WEP</string>
    <string name="wpa">WPA</string>
    <string name="wpa2">WPA2</string>
    <string name="password">Password</string>
    <string name="connect">Connect</string>
    <string name="cancel">Cancel</string>
    <string name="connect_us_a_pass">Connect using password</string>
    <string name="connect_us_a_wps_pin">Connect using wps pin</string>
    <string name="connect_us_brute_wps_attack">Brute wps</string>
    <string name="connect_us_pixie_dust_attack">Pixie dust</string>
    <string name="choose">Choose</string>
    <!--    <string name="copy">Copy</string>-->
    <string name="wpa3">WPA3</string>
    <string name="none_root_message">It looks like your device doesn have root rights, this function only works with root(</string>
    <string name="passwords_not_found_error">Passwords not found</string>
    <string name="reset">Reset</string>
    <string name="open">Open</string>
    <string name="share">Share</string>
    <string name="search">Search</string>
    <string name="title">Title</string>
    <string name="more" />
    <string name="scan_timeout">Scan timeout</string>
    <string name="macAddress">Mac Address</string>
    <string name="signalLevel">Signal level</string>
    <string name="encryptionType">Encryption Type</string>
    <string name="frequency">Frequency</string>
    <string name="user_message_for_request_location_permission">Location permission required for this feature to be available. Please grant the permission</string>
    <string name="user_message_for_enable_location">Location required for this feature to be available. Please enable it.</string>
    <string name="user_message_for_enable_wifi">Wi-Fi required for this feature to be available. Please enable it.</string>
    <string name="request_permission">Request permission</string>
    <string name="enable_location">Enable location</string>
    <string name="enable_wifi">Enable Wi-Fi</string>
</resources>