<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android = "http://schemas.android.com/apk/res/android"
    xmlns:app = "http://schemas.android.com/apk/res-auto"
    android:layout_width = "match_parent"
    android:layout_height = "match_parent">

    <LinearLayout
        android:layout_width = "match_parent"
        android:layout_height = "wrap_content"
        android:orientation = "vertical"
        android:padding = "15.0dp">

        <TextView
            android:layout_width = "match_parent"
            android:layout_height = "match_parent"
            android:gravity = "center"
            android:text = "@string/tools"
            android:paddingBottom = "20.0dp"/>

        <LinearLayout
            android:layout_width = "fill_parent"
            android:layout_height = "wrap_content"

            android:paddingBottom = "10.0dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width = "wrap_content"
                android:layout_height = "wrap_content"
                android:layout_gravity = "center"
                app:tint = "@color/low_purple"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id = "@+id/speed_test"
                style = "@style/menu_button"
                android:text = "@string/speed_test"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width = "fill_parent"
            android:layout_height = "wrap_content"
            android:paddingBottom = "10.0dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width = "wrap_content"
                android:layout_height = "wrap_content"
                android:layout_gravity = "center"
                app:tint = "@color/low_purple"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id = "@+id/password_recovery"
                style = "@style/menu_button"
                android:text = "@string/password_recovery"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width = "fill_parent"
            android:layout_height = "wrap_content"
            android:paddingBottom = "10.0dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width = "wrap_content"
                android:layout_height = "10dp"
                android:layout_gravity = "center"
                app:tint = "@color/low_purple"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id = "@+id/scan_local_network"
                style = "@style/menu_button"
                android:text = "@string/scan_local_network"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width = "fill_parent"
            android:layout_height = "wrap_content"
            android:paddingBottom = "10.0dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width = "wrap_content"
                android:layout_height = "wrap_content"
                android:layout_gravity = "center"
                app:tint = "@color/low_purple"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id = "@+id/free_wifi_map"
                style = "@style/menu_button"
                android:text = "@string/free_wifi_map"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width = "fill_parent"
            android:layout_height = "wrap_content"
            android:paddingBottom = "10.0dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width = "wrap_content"
                android:layout_height = "wrap_content"
                android:layout_gravity = "center"
                app:tint = "@color/low_purple"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id = "@+id/subnet_calculator"
                style = "@style/menu_button"
                android:text = "@string/subnet_calculator"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width = "fill_parent"
            android:layout_height = "wrap_content"
            android:paddingBottom = "10.0dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width = "wrap_content"
                android:layout_height = "wrap_content"
                android:layout_gravity = "center"
                app:tint = "@color/low_purple"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id = "@+id/mac_generator"
                style = "@style/menu_button"
                android:text = "@string/mac_generator"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width = "fill_parent"
            android:layout_height = "wrap_content"
            android:paddingBottom = "10.0dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width = "wrap_content"
                android:layout_height = "wrap_content"
                android:layout_gravity = "center"
                app:tint = "@color/low_purple"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id = "@+id/pass_generator"
                style = "@style/menu_button"
                android:text = "@string/password_generator"/>
        </LinearLayout>

        <TextView
            android:layout_width = "match_parent"
            android:layout_height = "match_parent"
            android:gravity = "center"
            android:text = "@string/other"

            android:paddingBottom = "20dp"/>
        <LinearLayout
            android:layout_width = "fill_parent"
            android:layout_height = "wrap_content"
            android:paddingBottom = "10.0dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width = "wrap_content"
                android:layout_height = "wrap_content"
                android:layout_gravity = "center"
                app:tint = "@color/low_purple"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id = "@+id/about"
                style = "@style/menu_button"
                android:text = "@string/about"/>
        </LinearLayout>

    </LinearLayout>

</ScrollView>