<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.wifi_pentester.view_models.settings.WifiScannerSettingsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/settings_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/nestedScrollView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5" />

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nestedScrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_max="wrap"
            app:layout_constraintHeight_percent="0.8"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/settings_textView"
            app:layout_constraintVertical_bias="0.5">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent">


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/sort_by_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="16dp"
                    android:hint="@string/sort_by"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <AutoCompleteTextView
                        android:id="@+id/sort_by_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none"
                        android:text="@={viewModel.wifiSortMode}"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/scan_timeout_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:hint="@string/scan_timeout"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <AutoCompleteTextView
                        android:id="@+id/scan_timeout_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none"
                        android:text="@={viewModel.wifiScanTimeout}"/>

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/filter_by_encryption_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/filter_by"
                    app:layout_constraintBottom_toTopOf="@+id/separator_view2"
                    app:layout_constraintEnd_toEndOf="@+id/separator_view2"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/separator_view2" />

                <View
                    android:id="@+id/separator_view2"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="40dp"
                    android:background="@color/low_gray"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/sort_by_layout"
                    app:layout_constraintWidth_percent="0.9"
                    tools:ignore="MissingConstraints" />

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/filter_by_encryption_chipGroup"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:chipSpacingHorizontal="5dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/separator_view2"
                    app:layout_constraintWidth_max="wrap"
                    app:layout_constraintWidth_percent="0.9">

                    <com.google.android.material.chip.Chip
                        android:id="@+id/wep_chip"
                        style="@style/App.Chip.Filter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="@={viewModel.isWepFilter}"
                        android:text="@string/wep" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/wpa_chip"
                        style="@style/App.Chip.Filter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="@={viewModel.isWpaFilter}"
                        android:text="@string/wpa" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/wpa2_chip"
                        style="@style/App.Chip.Filter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="@={viewModel.isWpa2Filter}"
                        android:text="@string/wpa2" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/wpa3_chip"
                        style="@style/App.Chip.Filter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="@={viewModel.isWpa3Filter}"
                        android:text="@string/wpa3" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/open_chip"
                        style="@style/App.Chip.Filter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="@={viewModel.isOpenFilter}"
                        android:text="@string/open" />


                    <com.google.android.material.chip.Chip
                        android:id="@+id/wps_chip"
                        style="@style/App.Chip.Filter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="@={viewModel.isWpsFilter}"
                        android:text="@string/wps" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/frequency_2_4_chip"
                        style="@style/App.Chip.Filter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="@={viewModel.isFrequency24Filter}"
                        android:text="2.4 Ghz" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/frequency_5_chip"
                        style="@style/App.Chip.Filter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="@={viewModel.isFrequency5Filter}"
                        android:text="5 Ghz" />

                </com.google.android.material.chip.ChipGroup>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nestedScrollView"
            app:layout_constraintVertical_bias="0.5">

            <Button
                android:id="@+id/settings_dialog_reset_button"
                style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/reset"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintVertical_bias="0.5" />

            <Button
                android:id="@+id/settings_dialog_ok_button"
                style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/ok"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintVertical_bias="0.5" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
