<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android = "http://schemas.android.com/apk/res/android"
    xmlns:app = "http://schemas.android.com/apk/res-auto">

    <data>
        <import type = "com.example.wifi_pentester.utils.RootChecker"/>
        <import type = "android.view.View"/>

        <variable
            name = "wifi"
            type = "com.example.wfc_models.wifi.scanners.data_models.Wifi"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width = "match_parent"
        android:layout_height = "wrap_content"
        android:minHeight = "150dp">

        <TextView
            android:id = "@+id/sel_connect_type_wifi_name_textView"
            android:layout_width = "wrap_content"
            android:layout_height = "wrap_content"
            android:layout_marginTop = "14dp"
            android:text = '@{wifi.name, default = "WifiName"}'
            android:textColor = "@color/black"
            android:textSize = "18sp"
            app:layout_constraintEnd_toEndOf = "parent"
            app:layout_constraintStart_toStartOf = "parent"
            app:layout_constraintTop_toTopOf = "parent"/>


        <Button
            android:id = "@+id/connect_us_a_password_button"
            style = "@style/App.Button.OutlinedButton"
            android:layout_width = "0dp"
            android:layout_height = "wrap_content"
            android:layout_marginTop = "15dp"
            android:text = "@string/connect_us_a_pass"
            app:layout_constraintBottom_toTopOf = "@+id/connect_us_a_wps_pin_button"
            app:layout_constraintEnd_toEndOf = "parent"
            app:layout_constraintStart_toStartOf = "parent"
            app:layout_constraintTop_toBottomOf = "@+id/sel_connect_type_wifi_name_textView"
            app:layout_constraintWidth_percent = "0.85"/>

        <Button
            android:id = "@+id/connect_us_a_wps_pin_button"
            style = "@style/App.Button.OutlinedButton"
            android:layout_width = "0dp"
            android:layout_height = "wrap_content"
            android:text = "@string/connect_us_a_wps_pin"
            android:visibility = "@{wifi.haveWps ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toTopOf = "@+id/connect_us_brute_wps_attack_button"
            app:layout_constraintEnd_toEndOf = "parent"
            app:layout_constraintStart_toStartOf = "parent"
            app:layout_constraintTop_toBottomOf = "@+id/connect_us_a_password_button"
            app:layout_constraintWidth_percent = "0.85"/>

        <Button
            android:id = "@+id/connect_us_brute_wps_attack_button"
            style = "@style/App.Button.OutlinedButton"
            android:layout_width = "0dp"
            android:layout_height = "wrap_content"
            android:enabled = "@{RootChecker.canRunRootCommands()}"
            android:text = "@string/connect_us_brute_wps_attack"
            android:visibility = "@{wifi.haveWps ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toTopOf = "@+id/connect_us_pixie_dust_attack_button"
            app:layout_constraintEnd_toEndOf = "parent"
            app:layout_constraintStart_toStartOf = "parent"
            app:layout_constraintTop_toBottomOf = "@+id/connect_us_a_wps_pin_button"
            app:layout_constraintWidth_percent = "0.85"/>

        <Button
            android:id = "@+id/connect_us_pixie_dust_attack_button"
            style = "@style/App.Button.OutlinedButton"
            android:layout_width = "0dp"
            android:layout_height = "wrap_content"
            android:layout_marginBottom = "20dp"
            android:enabled = "@{RootChecker.canRunRootCommands()}"
            android:text = "@string/connect_us_pixie_dust_attack"
            android:visibility = "@{wifi.haveWps ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf = "parent"
            app:layout_constraintEnd_toEndOf = "parent"
            app:layout_constraintStart_toStartOf = "parent"
            app:layout_constraintTop_toBottomOf = "@+id/connect_us_brute_wps_attack_button"
            app:layout_constraintWidth_percent = "0.85"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>