<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android = "http://schemas.android.com/apk/res/android"
    xmlns:app = "http://schemas.android.com/apk/res-auto"
    xmlns:tools = "http://schemas.android.com/tools"
    android:layout_width = "match_parent"
    android:layout_height = "match_parent"
    tools:context = ".ui.main.MainActivity">


    <com.gauravk.bubblenavigation.BubbleNavigationConstraintView
        android:id = "@+id/top_navigation_constraint"
        android:layout_width = "match_parent"
        android:layout_height = "wrap_content"
        android:background = "@color/white"
        android:elevation = "4dp"
        android:padding = "12dp"
        app:bnc_mode = "spread"
        app:layout_anchorGravity = "center">

        <com.gauravk.bubblenavigation.BubbleToggleView
            android:id = "@+id/tab_wifi"
            android:layout_width = "wrap_content"
            android:layout_height = "wrap_content"
            app:bt_active = "true"
            app:bt_icon = "@drawable/ic_wifi"
            app:bt_shape = "@drawable/rounded_rect"
            app:bt_shapeColor = "@color/low_purple"
            app:bt_title = "@string/wifi_title"

            app:layout_constraintBottom_toBottomOf = "parent"
            app:layout_constraintEnd_toStartOf = "@+id/tab_channels"
            app:layout_constraintStart_toStartOf = "parent"
            app:layout_constraintTop_toTopOf = "parent"/>

        <com.gauravk.bubblenavigation.BubbleToggleView
            android:id = "@id/tab_channels"
            android:layout_width = "wrap_content"
            android:layout_height = "wrap_content"
            app:bt_icon = "@drawable/ic_channels"
            app:bt_shape = "@drawable/rounded_rect"
            app:bt_shapeColor = "@color/low_purple"
            app:bt_title = "@string/channels_title"

            app:layout_constraintBottom_toBottomOf = "parent"
            app:layout_constraintEnd_toEndOf = "parent"
            app:layout_constraintStart_toStartOf = "parent"
            app:layout_constraintTop_toTopOf = "parent"/>

        <com.gauravk.bubblenavigation.BubbleToggleView
            android:id = "@+id/tab_menu"
            android:layout_width = "wrap_content"
            android:layout_height = "wrap_content"
            app:bt_icon = "@drawable/ic_menu"
            app:bt_shape = "@drawable/rounded_rect"
            app:bt_shapeColor = "@color/low_purple"
            app:bt_title = "@string/menu_title"

            app:layout_constraintBottom_toBottomOf = "parent"
            app:layout_constraintEnd_toEndOf = "parent"
            app:layout_constraintStart_toEndOf = "@+id/tab_channels"
            app:layout_constraintTop_toTopOf = "parent"/>

    </com.gauravk.bubblenavigation.BubbleNavigationConstraintView>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/top_navigation_constraint" />

</RelativeLayout>
